src/ea-core/org.ect.ea.extensions.clocks/src/org/ect/ea/extensions/clocks/parsers/TCAClocksParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g 2011-03-26 15:51:15

  package org.ect.ea.extensions.clocks.parsers;

	import org.eclipse.emf.common.util.BasicEList;
import org.eclipse.emf.common.util.EList;
import org.ect.ea.extensions.clocks.ClockUtils;
import org.ect.ea.extensions.clocks.codegen.CodegenUtils;
	
	 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class TCAClocksParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "COMMA", "IDENT", "AND", "LT", "LEQ", "EQUALS", "GEQ", "GT", "NUMBER", "NOT", "LPARAN", "RPARAN", "LETTER", "DIGIT", "OR", "MINUS", "DOT", "MEMCELL", "WS"
    };
    public static final int LT=8;
    public static final int MEMCELL=22;
    public static final int LETTER=17;
    public static final int NUMBER=13;
    public static final int EQUALS=10;
    public static final int NOT=14;
    public static final int MINUS=20;
    public static final int AND=7;
    public static final int EOF=-1;
    public static final int TRUE=4;
    public static final int WS=23;
    public static final int LPARAN=15;
    public static final int COMMA=5;
    public static final int OR=19;
    public static final int RPARAN=16;
    public static final int IDENT=6;
    public static final int GT=12;
    public static final int GEQ=11;
    public static final int DIGIT=18;
    public static final int DOT=21;
    public static final int LEQ=9;

    // delegates
    // delegators


        public TCAClocksParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TCAClocksParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TCAClocksParser.tokenNames; }
    public String getGrammarFileName() { return "/ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g"; }



      /** Convenience Constructor. Construct a new TCAClocksParser on the given 
        * String. The new TCAClocksParser is built using classes CommonTokenStream, 
        * TCAClocksLexer and ANTLRStringStream.
        */
      public TCAClocksParser(String input) {
        this(new CommonTokenStream(new TCAClocksLexer(new ANTLRStringStream(input))));
      }



    // $ANTLR start "automaton_clocks"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:37:1: automaton_clocks returns [String ret = \"\"] : s1= clock ( COMMA s1= clock )* ;
    public final String automaton_clocks() throws RecognitionException {
        String ret =  "";

        String s1 = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:45:44: (s1= clock ( COMMA s1= clock )* )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:46:5: s1= clock ( COMMA s1= clock )*
            {
            pushFollow(FOLLOW_clock_in_automaton_clocks68);
            s1=clock();

            state._fsp--;

             if (s1 != "") ret = s1; 
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:48:5: ( COMMA s1= clock )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==COMMA) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:48:6: COMMA s1= clock
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_automaton_clocks84); 
            	    pushFollow(FOLLOW_clock_in_automaton_clocks88);
            	    s1=clock();

            	    state._fsp--;

            	     if (s1 != "") ret = ret.concat(",").concat(s1); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "automaton_clocks"


    // $ANTLR start "clock"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:53:9: private clock returns [String ret = \"\"] : i= IDENT ;
    public final String clock() throws RecognitionException {
        String ret =  "";

        Token i=null;

        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:53:41: (i= IDENT )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:54:5: i= IDENT
            {
            i=(Token)match(input,IDENT,FOLLOW_IDENT_in_clock130); 
             ret = i.getText(); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "clock"


    // $ANTLR start "clock_constraint"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:58:1: clock_constraint returns [String ret = \"\"] : c= cc ( AND s1= cc )* ;
    public final String clock_constraint() throws RecognitionException {
        String ret =  "";

        String c = null;

        String s1 = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:63:44: (c= cc ( AND s1= cc )* )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:64:5: c= cc ( AND s1= cc )*
            {
            pushFollow(FOLLOW_cc_in_clock_constraint164);
            c=cc();

            state._fsp--;

             ret = c; 
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:66:5: ( AND s1= cc )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:66:6: AND s1= cc
            	    {
            	    match(input,AND,FOLLOW_AND_in_clock_constraint180); 
            	    pushFollow(FOLLOW_cc_in_clock_constraint184);
            	    s1=cc();

            	    state._fsp--;

            	     if (s1!="") ret = ret + "&" + s1; 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "clock_constraint"


    // $ANTLR start "shape_clock_constraint_interstep"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:71:1: shape_clock_constraint_interstep[String index] returns [String ret = \"\"] : c= shape_cc_interstep[index] ( AND s1= shape_cc_interstep[index] )* ;
    public final String shape_clock_constraint_interstep(String index) throws RecognitionException {
        String ret =  "";

        String c = null;

        String s1 = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:75:75: (c= shape_cc_interstep[index] ( AND s1= shape_cc_interstep[index] )* )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:76:5: c= shape_cc_interstep[index] ( AND s1= shape_cc_interstep[index] )*
            {
            pushFollow(FOLLOW_shape_cc_interstep_in_shape_clock_constraint_interstep225);
            c=shape_cc_interstep(index);

            state._fsp--;

             ret = c;
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:78:5: ( AND s1= shape_cc_interstep[index] )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AND) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:78:6: AND s1= shape_cc_interstep[index]
            	    {
            	    match(input,AND,FOLLOW_AND_in_shape_clock_constraint_interstep241); 
            	    pushFollow(FOLLOW_shape_cc_interstep_in_shape_clock_constraint_interstep245);
            	    s1=shape_cc_interstep(index);

            	    state._fsp--;

            	     if (s1!="") ret = ret + "&" + s1; 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "shape_clock_constraint_interstep"


    // $ANTLR start "shape_cc_interstep"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:83:9: private shape_cc_interstep[String index] returns [String ret = \"\"] : ( (c= shape_comparison_interstep[index] ) | (t= TRUE ) );
    public final String shape_cc_interstep(String index) throws RecognitionException {
        String ret =  "";

        Token t=null;
        String c = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:87:69: ( (c= shape_comparison_interstep[index] ) | (t= TRUE ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IDENT) ) {
                alt4=1;
            }
            else if ( (LA4_0==TRUE) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:88:5: (c= shape_comparison_interstep[index] )
                    {
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:88:5: (c= shape_comparison_interstep[index] )
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:88:6: c= shape_comparison_interstep[index]
                    {
                    pushFollow(FOLLOW_shape_comparison_interstep_in_shape_cc_interstep290);
                    c=shape_comparison_interstep(index);

                    state._fsp--;

                     ret = "(" + c + ")";

                    }


                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:91:5: (t= TRUE )
                    {
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:91:5: (t= TRUE )
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:91:6: t= TRUE
                    {
                    t=(Token)match(input,TRUE,FOLLOW_TRUE_in_shape_cc_interstep316); 
                     ret =t.getText();

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "shape_cc_interstep"


    // $ANTLR start "shape_comparison_interstep"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:96:9: private shape_comparison_interstep[String index] returns [String ret = \"\"] : c= clock ( LT | LEQ | EQUALS | GEQ | GT ) n= NUMBER ;
    public final String shape_comparison_interstep(String index) throws RecognitionException {
        String ret =  "";

        Token n=null;
        String c = null;


        String add = (index.equals("")) ? "" : "_" + index; 
        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:102:61: (c= clock ( LT | LEQ | EQUALS | GEQ | GT ) n= NUMBER )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:103:9: c= clock ( LT | LEQ | EQUALS | GEQ | GT ) n= NUMBER
            {
            pushFollow(FOLLOW_clock_in_shape_comparison_interstep370);
            c=clock();

            state._fsp--;

             ret = "(" + CodegenUtils.GLOBAL_CLOCK + add + "+1 - " + c + add + ")"; 
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:105:9: ( LT | LEQ | EQUALS | GEQ | GT )
            int alt5=5;
            switch ( input.LA(1) ) {
            case LT:
                {
                alt5=1;
                }
                break;
            case LEQ:
                {
                alt5=2;
                }
                break;
            case EQUALS:
                {
                alt5=3;
                }
                break;
            case GEQ:
                {
                alt5=4;
                }
                break;
            case GT:
                {
                alt5=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:105:10: LT
                    {
                    match(input,LT,FOLLOW_LT_in_shape_comparison_interstep394); 
                     ret = ret.concat(" < "); 

                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:107:10: LEQ
                    {
                    match(input,LEQ,FOLLOW_LEQ_in_shape_comparison_interstep418); 
                     ret = ret.concat(" <= "); 

                    }
                    break;
                case 3 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:109:10: EQUALS
                    {
                    match(input,EQUALS,FOLLOW_EQUALS_in_shape_comparison_interstep442); 
                     ret = ret.concat(" = "); 

                    }
                    break;
                case 4 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:111:10: GEQ
                    {
                    match(input,GEQ,FOLLOW_GEQ_in_shape_comparison_interstep466); 
                     ret = ret.concat(" >= "); 

                    }
                    break;
                case 5 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:113:10: GT
                    {
                    match(input,GT,FOLLOW_GT_in_shape_comparison_interstep490); 
                     ret = ret.concat(" > "); 

                    }
                    break;

            }

            n=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_shape_comparison_interstep526); 
             ret = ret.concat(n.getText()); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "shape_comparison_interstep"


    // $ANTLR start "shape_clock_constraint"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:119:1: shape_clock_constraint[String index] returns [String ret = \"\"] : c= shape_cc[index] ( AND s= shape_cc[index] )* ;
    public final String shape_clock_constraint(String index) throws RecognitionException {
        String ret =  "";

        String c = null;

        String s = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:122:65: (c= shape_cc[index] ( AND s= shape_cc[index] )* )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:123:5: c= shape_cc[index] ( AND s= shape_cc[index] )*
            {
            pushFollow(FOLLOW_shape_cc_in_shape_clock_constraint559);
            c=shape_cc(index);

            state._fsp--;

             ret = c; 
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:125:5: ( AND s= shape_cc[index] )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==AND) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:125:6: AND s= shape_cc[index]
            	    {
            	    match(input,AND,FOLLOW_AND_in_shape_clock_constraint575); 
            	    pushFollow(FOLLOW_shape_cc_in_shape_clock_constraint579);
            	    s=shape_cc(index);

            	    state._fsp--;

            	     if (!s.equals("")) ret = ret + "&" + s; 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "shape_clock_constraint"


    // $ANTLR start "shape_cc"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:130:9: private shape_cc[String index] returns [String ret = \"\"] : ( (c= shape_comparison[index] ) | (t= TRUE ) );
    public final String shape_cc(String index) throws RecognitionException {
        String ret =  "";

        Token t=null;
        String c = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:133:58: ( (c= shape_comparison[index] ) | (t= TRUE ) )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==IDENT) ) {
                alt7=1;
            }
            else if ( (LA7_0==TRUE) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:134:5: (c= shape_comparison[index] )
                    {
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:134:5: (c= shape_comparison[index] )
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:134:6: c= shape_comparison[index]
                    {
                    pushFollow(FOLLOW_shape_comparison_in_shape_cc623);
                    c=shape_comparison(index);

                    state._fsp--;

                     ret = "(" + c + ")";

                    }


                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:137:5: (t= TRUE )
                    {
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:137:5: (t= TRUE )
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:137:6: t= TRUE
                    {
                    t=(Token)match(input,TRUE,FOLLOW_TRUE_in_shape_cc649); 
                     ret =t.getText(); 

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "shape_cc"


    // $ANTLR start "shape_comparison"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:142:9: private shape_comparison[String index] returns [String ret = \"\"] : c= clock ( LT | LEQ | EQUALS | GEQ | GT ) n= NUMBER ;
    public final String shape_comparison(String index) throws RecognitionException {
        String ret =  "";

        Token n=null;
        String c = null;


        String add = (index.equals("")) ? "" : "_" + index; 
        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:147:62: (c= clock ( LT | LEQ | EQUALS | GEQ | GT ) n= NUMBER )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:148:9: c= clock ( LT | LEQ | EQUALS | GEQ | GT ) n= NUMBER
            {
            pushFollow(FOLLOW_clock_in_shape_comparison703);
            c=clock();

            state._fsp--;

             ret = "(" + CodegenUtils.GLOBAL_CLOCK + add + " - " + c + add + ")";
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:150:9: ( LT | LEQ | EQUALS | GEQ | GT )
            int alt8=5;
            switch ( input.LA(1) ) {
            case LT:
                {
                alt8=1;
                }
                break;
            case LEQ:
                {
                alt8=2;
                }
                break;
            case EQUALS:
                {
                alt8=3;
                }
                break;
            case GEQ:
                {
                alt8=4;
                }
                break;
            case GT:
                {
                alt8=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAClocks.g:150:10: LT
                    {
                    match(input,LT,FOLLOW_LT_in_shape_comparison727); 
                     ret = ret.concat(" < "); 
